# asdf-rust

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: main.yml
pure-data/: .editorconfig  Makefile  README.md  asdf~-help.pd  asdf~.c  objects.txt
src/: capi.rs  error.rs  lib.rs  streamer.rs  transform.rs
src/audiofile/: converter.rs  dynamic.rs  flac.rs  mod.rs  mp3.rs  vorbis.rs  wav.rs
src/parser/: elements.rs  error.rs  mod.rs  time.rs
tests/: asdf_doc_scenes.rs
