[package]
name = "asdf"
version = "0.0.0"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

publish = false

[features]
# See https://github.com/lu-zero/cargo-c/issues/152
capi = []

[package.metadata.capi.header]
subdirectory = false

[dependencies]
asdfspline = { path = "asdfspline" }
rtrb = "0.2"
rsor = "0.1"
errno = "*"
libflac-sys = "0.2"
hound = "*"
lazy_static = "1.3.0"
libc = "0.2"
libsamplerate-sys = "*"
minimp3_ex-sys = { version = "0.1", features = ["float-output"] }
nalgebra = "0.24"
ogg-sys = "*"
regex = "1"
thiserror = "1.0"
vorbis-sys = "0.1"
vorbisfile-sys = "*"
xmlparser = "0.12"
