[package]
name = "asdf"
version = "1.1.0"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.68"

publish = false

[features]
# See https://github.com/lu-zero/cargo-c/issues/152
capi = []

[package.metadata.capi.header]
subdirectory = false

[dependencies]
asdfspline = { path = "asdfspline" }
rtrb = "0.3"
rsor = "0.1"
errno = "0.3"
libflac-sys = "0.3"
hound = "3"
lazy_static = "1"
libc = "0.2"
libsamplerate-sys = "0.1"
minimp3_ex-sys = { version = "0.1", features = ["float-output"] }
ogg-sys = "*"
regex = "1"
thiserror = "2"
vorbis-sys = "0.1"
vorbisfile-sys = "*"
xmlparser = "0.12"
